[gd_scene load_steps=7 format=3 uid="uid://cubimvb7ees1l"]

[ext_resource type="Texture2D" uid="uid://cmgsqcsdrwi1h" path="res://icons/musicOn.png" id="1_6i5vd"]
[ext_resource type="Script" uid="uid://cailbhg6e8onx" path="res://scenes/ui/song_display.gd" id="1_g7pr0"]
[ext_resource type="Theme" uid="uid://bclqqrp1ft5jd" path="res://themes/default_song_display.tres" id="1_io72a"]
[ext_resource type="Texture2D" uid="uid://jvelle1in3vn" path="res://icons/xbox_rs_outline_orange_gray.png" id="3_0nvam"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nvam"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 0.784314)
corner_radius_top_left = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_samal"]

[node name="SongDisplay" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_io72a")
script = ExtResource("1_g7pr0")
song_display_theme = ExtResource("1_io72a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -379.0
offset_top = -54.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
self_modulate = Color(1, 1, 1, 0.784314)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0nvam")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="MusicIcon" type="TextureRect" parent="MarginContainer/PanelContainer/HBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("1_6i5vd")
expand_mode = 1

[node name="SongTitle" type="RichTextLabel" parent="MarginContainer/PanelContainer/HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "The Kickflips - Nollie Onward"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
size_flags_vertical = 4
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="SongTitle2" type="RichTextLabel" parent="MarginContainer/PanelContainer/HBoxContainer/ScrollContainer/MarginContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "The Heelflips - Fakie Rollaway (Live Version)"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15

[node name="RightStick" type="TextureRect" parent="MarginContainer/PanelContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_0nvam")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 22

[node name="Skip" type="RichTextLabel" parent="MarginContainer/PanelContainer/HBoxContainer/MarginContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.670588, 0.694118, 0.713726, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "Skip"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ScrollStart" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxTexture_samal")
